<resources>
    <string name="app_name">ScanService</string>
    <string name="menu_settings">Settings</string>
    <string name="set_cm60Param">Settings</string>
    <string name="lastImage">Get lastImage</string>
    <string name="main_page_title">Scanning</string>
    <string name="setting_page_title">Setting</string>
    <string name="imageShow_page_title">ImageShow</string>
    <string name="deviceSetting_page_title">CM60</string>
    <string name="setting_icon_setting_text">设置</string>
    <string name="setting_icon_info_text">系统信息</string>
    <string name="setting_icon_debug_text">调试</string>
    <string name="code_set_title">码制设置</string>
    <string name="menu_item_hint">menuItem</string>
    <string name="menu_item_code_set">码制设置</string>
    <string name="menu_item_sensor_set">摄像头设置</string>
    <string name="menu_item_sensor_update">CM60 升级</string>
    <string name="menu_item_debug_time">扫描时间</string>
    <string name="preference_voice_title">Scan Voice</string>
    <string name="menu_item_debug_i2c">I2c 调试</string>
    <string name="menu_item_debug_scan">扫码测试</string>
    <string name="menu_item_debug_log">日志设置</string>
    <string name="menu_item_debug_camera">摄像头调试</string>
    <string name="codeset_btn_details">详情</string>
    <string name="paramset_min_len">最小长度</string>
    <string name="paramset_max_len">最长长度</string>
    <string name="service_switch">Scan Service Switch</string>
    <string name="get_last_image">Get Last Image</string>
    <string name="set_scan_key">Set Scan Key</string>
    <string name="scan_mode">Scan Mode</string>
    <string name="image_mode">Image Mode</string>
    <string name="set_scan_key_mode">Set SCAN Key Mode</string>
    <string name="scan_for_picture_or_press_menu_for_options">Press SCAN button to take picture or select menu for options.\n\n</string>
    <string name="scan_for_start_scanning_or_press_menu_for_options">Press SCAN button to start barcode scanning or select menu for options.\n\n</string>
    <string name="scan_to_set_scan_key">Press SCAN button to configure scan key.\n\n</string>
    <string name="results_hint">Data displayed here</string>
    <string name="length_hint">Length displayed here</string>
    <string name="codeid_hint">CodeID displayed here</string>
    <string name="aimid_hint">AimID displayed here</string>
    <string name="modifier_hint">Modifier displayed here</string>
    <string name="label_results">Data:</string>
    <string name="label_length">Length:</string>
    <string name="label_codeid">CodeID:</string>
    <string name="label_aimid">AimID:</string>
    <string name="label_modifier">Modifier:</string>
    <string name="label_scan_mode">Scan Mode</string>
    <string name="label_image_mode">Image Mode</string>
    <string name="label_data_results">Data: (barcode_data)\nLength: (length)\nCodeId: (code_id)\nAimId: (aim_id)\nModifier: (modifier)</string>
    <string name="notification_title">Scan Service</string>
    <string name="notification_content">Scan Service is running</string>
    <string name="scan_service_stop">Scan Service is stopped</string>
    <string name="pref_ic_lights_control_settings">Lights Control Settings</string>
    <string name="pref_ic_illumination_on_summary">Enable/Disable Illumination</string>
    <string name="pref_ic_illumination_on_settings">Illumination Enable</string>
    <string name="pref_ic_aimer_on_summary">Enable/Disable Aimer</string>
    <string name="pref_ic_aimer_on_settings">Aimer Enable</string>
    <string name="sym_advanced_sym_setup">Advanced Symbology Setup</string>
    <string name="sym_ocr_config">OCR Configuration</string>
    <string name="input_config">Input Configuration</string>
    <string name="sym_configuration">Symbology Configuration</string>
    <string name="sym_enable">Enable</string>
    <string name="sym_enable_summary">Select to enable symbology</string>
    <string name="sym_advanced_preferences">Advanced Preferences</string>
    <string name="sym_advanced_preferences_summary">Configure advanced settings (min, max, etc.)</string>
    <string name="sym_minlength_title">Min Length</string>
    <string name="sym_minlength_summary">Configure Minimum Length</string>
    <string name="sym_maxlength_title">Max Length</string>
    <string name="sym_maxlength_summary">Configure Maximum Length</string>
    <string name="symbology_select_to_configure_advanced_properties">Select to config advanced properties</string>
    <string name="sym_enable_disable">Enable/Disable Symbologies</string>
    <string name="sym_uncheck_to_disable">Currently enabled, uncheck to disable</string>
    <string name="sym_check_to_enable">Currently disabled, check to enable</string>
    <string name="scanning_preferences">Scanning Preferences</string>
    <string name="result_char_set">Result char set</string>
    <string name="title_lights_config">Lights Configuration</string>
    <string name="title_lights_config_summary">For configuring lights mode</string>
    <string name="key_config">Key Configuration</string>
    <string name="key_config_sum">For configuring scan key</string>
    <string name="key_f1">F1</string>
    <string name="key_f2">F2</string>
    <string name="key_f3">F3</string>
    <string name="key_f4">F4</string>
    <string name="key_f5">F5</string>
    <string name="key_f6">F6</string>
    <string name="key_f7">F7</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="prefix">prefix</string>
    <string name="suffix">suffix</string>
    <string name="append_ending_char">append ending char</string>
    <string name="decoding_settings">Decoding preferences</string>
    <string-array name="append_ending_entry">
        <item>Enter</item>
        <item>\\n</item>
        <item>\\t</item>
        <item>null</item>
    </string-array>
    <string-array name="input_modes">
        <item>Broadcast mode</item>
        <item>EditText input mode</item>
    </string-array>
    <string name="decode_wait_for_decode_config">WaitForDecode Config</string>
    <string name="title_wait_for_decode_config_summary">Wait for single or multiple barcodes</string>
    <string-array name="wait_for_decode_config_values_titles">
        <item>Wait For Single</item>
        <item>Wait For Multiple</item>
    </string-array>
    <string-array name="file_save_type_titles">
        <item>.pgm</item>
        <item>.png</item>
        <item>.raw</item>
    </string-array>
    <string name="sybology_configuration">Symbology Configuration</string>
    <string name="symbology_enable_disable_configuration">Enable/Disable</string>
    <string name="symbology_enable_disable_configuration_summary">For enabling or disabling symbologies</string>
    <string name="symbology_advanced_configuration">Advanced Configuration</string>
    <string name="symbology_advanced_configuration_summary">For configuring min, max, flags, etc.</string>
    <string name="sym_postal_list_title">Postal Symbology Configuration</string>
    <string name="sym_postal_list_summary">For configuring 2D postal symbologies</string>
    <string-array name="postal_sym_entries">
        <item>No Postal</item>
        <item>Austrialan Post</item>
        <item>British Post</item>
        <item>Canadian Post</item>
        <item>Dutch Post</item>
        <item>Japan Post</item>
        <item>Planet Code</item>
        <item>Post Net</item>
        <item>US Postals</item>
        <item>UPU 4 State</item>
        <item>USPS 4 State</item>
    </string-array>
    <string name="sym_koreapost">China Post</string>
    <string name="sym_chinapost">Korea Post</string>
    <string-array name="ocr_template_entries">
        <item>User Defined</item>
        <item>Passport</item>
        <item>ISBN</item>
        <item>Price Field</item>
        <item>MicrE-13 B</item>
    </string-array>
    <string-array name="ocr_mode_entries">
        <item>Off</item>
        <item>Normal Video</item>
        <item>Inverse</item>
        <item>Both</item>
    </string-array>
    <string name="sym_aztec_title">Aztec Code</string>
    <string name="sym_codabar_title">Codabar</string>
    <string name="sym_code11_title">Code11</string>
    <string name="sym_code128_title">Code128</string>
    <string name="sym_code39_title">Code39</string>
    <string name="sym_code49_title">Code49</string>
    <string name="sym_code93_title">Code93</string>
    <string name="sym_composite_title">Composite</string>
    <string name="sym_datamatrix_title">Data Matrix</string>
    <string name="sym_ean8_title">EAN8</string>
    <string name="sym_ean13_title">EAN13</string>
    <string name="sym_int25_title">INT25</string>
    <string name="sym_maxicode_title">Maxicode</string>
    <string name="sym_micropdf_title">MicroPDF</string>
    <string name="sym_ocr_title">OCR</string>
    <string name="sym_pdf417_title">PDF417</string>
    <string name="sym_postnet_title">Postnet</string>
    <string name="sym_qr_title">QR</string>
    <string name="sym_rss_title">RSS</string>
    <string name="sym_upca_title">UPC-A</string>
    <string name="sym_upce0_title">UPC-E0</string>
    <string name="sym_upce1_title">UPC-E1</string>
    <string name="sym_isbt_title">ISBT</string>
    <string name="sym_bpo_title">BPO</string>
    <string name="sym_canpost_title">Canadian Post</string>
    <string name="sym_auspost_title">Australian Post</string>
    <string name="sym_iata25_title">IATA25</string>
    <string name="sym_codablock_title">Codeblock</string>
    <string name="sym_japost_title">Japan Post</string>
    <string name="sym_planet_title">Planet</string>
    <string name="sym_dutchpost_title">Dutch Post</string>
    <string name="sym_msi_title">MSI</string>
    <string name="sym_tlcode39_title">TLC Code39</string>
    <string name="sym_trioptic_title">Trioptic</string>
    <string name="sym_code32_title">Code32</string>
    <string name="sym_strt25_title">STRT25</string>
    <string name="sym_matrix25_title">Matrix 2 or 5</string>
    <string name="sym_plessey_title">Plessey</string>
    <string name="sym_chinapost_title">China Post</string>
    <string name="sym_koreapost_title">Korean Post</string>
    <string name="sym_telepen_title">Telepen</string>
    <string name="sym_code16k_title">Code16K</string>
    <string name="sym_posicode_title">PosiCode</string>
    <string name="sym_couponcode_title">Coupon Code</string>
    <string name="sym_usps4cb_title">USPS4CB</string>
    <string name="sym_idtag_title">ID Tag</string>
    <string name="sym_label_title">Label</string>
    <string name="sym_gs1_128_title">GS1 128</string>
    <string name="sym_hanxin_title">Hanxin</string>
    <string name="sym_gridmatrix_title">Grid Matrix</string>
    <string name="sym_postals_title">Postals</string>
    <string name="sym_us_postals1_title">US Postals</string>
    <string name="sym_check_enable_title">Check Enable</string>
    <string name="sym_start_stop_transmit_enable_title">Start/Stop Transit</string>
    <string name="sym_codabar_concatenate_enable_title">Codabar Concatenate</string>
    <string name="sym_append_enable_title">Append</string>
    <string name="sym_fullascii_enable_title">Start/Stop Transit</string>
    <string name="sym_composite_upc_enable_title">Composite UPC</string>
    <string name="sym_check_transmit_enable_title">Check Transmit</string>
    <string name="sym_num_transmit_enable_title">Num Transmit</string>
    <string name="sym_addenda_separator_enable_title">Addenda Separator</string>
    <string name="sym_2_digit_addenda_enable_title">2 Digit Addenda</string>
    <string name="sym_5_digit_addenda_enable_title">5 Digit Addenda</string>
    <string name="sym_addenda_required_enable_title">Addenda Required</string>
    <string name="sym_upce0_expanded_enable_title">UPCE0 Exanded</string>
    <string name="sym_rss_rsl_enable_title">RSL RSS Enable</string>
    <string name="sym_rss_rse_enable_title">RSE RSS Enable</string>
</resources>