<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingActivity">

    <com.dawn.newlandscan.widget.TopToolbar
        android:id="@+id/tb_topToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.dawn.newlandscan.widget.TopToolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_topToolBar"
        android:layout_margin="@dimen/setting_general_margin">

        <ImageButton
            android:id="@+id/btn_device_setting"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginLeft="@dimen/setting_icon_margin_left"
            android:layout_width="@dimen/setting_icon_width"
            android:layout_height="@dimen/setting_icon_height"
            android:src="@drawable/ic_desktop_setting"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tv_device_setting"
            android:layout_marginTop="@dimen/setting_text_margin_top"
            android:layout_width="@dimen/setting_text_width"
            android:layout_height="@dimen/setting_text_height"
            android:text="@string/setting_icon_setting_text"
            android:textSize="@dimen/setting_icon_text_size"
            android:layout_below="@+id/btn_device_setting"
            android:gravity="center"
            android:layout_marginLeft="@dimen/setting_text_margin_left"
            />

        <ImageButton
            android:id="@+id/btn_device_info"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="@dimen/setting_icon_width"
            android:layout_height="@dimen/setting_icon_height"
            android:src="@drawable/ic_desktop_info"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/setting_icon_margin_right"/>
        <TextView
            android:layout_marginTop="@dimen/setting_text_margin_top"
            android:layout_width="@dimen/setting_text_width"
            android:layout_height="@dimen/setting_text_height"
            android:text="@string/setting_icon_info_text"
            android:textSize="@dimen/setting_icon_text_size"
            android:layout_below="@+id/btn_device_info"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginRight="@dimen/setting_text_margin_right"
            />

        <ImageButton
            android:id="@+id/btn_device_debug"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="@dimen/setting_icon_width"
            android:layout_height="@dimen/setting_icon_height"
            android:src="@drawable/ic_desktop_debug"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_device_setting"
            android:layout_marginLeft="@dimen/setting_icon_margin_left"
            android:layout_marginTop="@dimen/setting_icon_margin_top"/>
        <TextView
            android:layout_marginTop="@dimen/setting_text_margin_top"
            android:layout_width="@dimen/setting_text_width"
            android:layout_height="@dimen/setting_text_height"
            android:text="@string/setting_icon_debug_text"
            android:textSize="@dimen/setting_icon_text_size"
            android:layout_below="@+id/btn_device_debug"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/setting_text_margin_left"
            />

    </RelativeLayout>







</RelativeLayout>